<resources>
    <string name="app_name">BIN search</string>
    <string name="network">SCHEME / NETWORK</string>
    <string name="type">TYPE</string>
    <string name="bank">BANK</string>
    <string name="brand">BRAND</string>
    <string name="prepaid">PREPAID</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="country">COUNTRY</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="length">length</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="get_info">GET INFORMATION</string>
    <string name="empty_field_error">Enter card number</string>
    <string name="main_menu_name">BIN search</string>
    <string name="input_error">Invalid data</string>
</resources>