<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/bank"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tvError"
        app:layout_constraintTop_toBottomOf="@+id/tvError" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="Enter the first digits of a card number (BIN/IIN)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edFieldInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/network"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tvError"
        app:layout_constraintTop_toBottomOf="@+id/tvError" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/type"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvError" />

    <TextView
        android:id="@+id/tvScheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint='\?'
        android:textColor="#000000"
        android:textColorHint="#5A5A5A"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="Debit / Credit"
        android:textColor="#000000"
        android:textColorHint="#5A5A5A"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/tvBankName_City"
        android:layout_width="98dp"
        android:layout_height="16dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="100dp"
        android:gravity="right"
        android:hint="\?"
        android:textColor="#000000"
        android:textColorHint="#5A5A5A"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvType"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="\?"
        android:textColor="#000000"
        android:textColorHint="#5A5A5A"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tvBankName_City"
        app:layout_constraintTop_toBottomOf="@+id/tvBankName_City" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="\?"
        android:textColor="#000000"
        android:textColorHint="#5A5A5A"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tvUrl"
        app:layout_constraintTop_toBottomOf="@+id/tvUrl" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/brand"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tvScheme"
        app:layout_constraintTop_toBottomOf="@+id/tvScheme" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/prepaid"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tvType"
        app:layout_constraintTop_toBottomOf="@+id/tvType" />

    <TextView
        android:id="@+id/tvBrand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="\?"
        android:textColor="#000000"
        android:textColorHint="#5A5A5A"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/tvPrepaid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="Yes / No"
        android:textColor="#000000"
        android:textColorHint="#5A5A5A"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/card_number"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tvBrand"
        app:layout_constraintTop_toBottomOf="@+id/tvBrand" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="LENGTH"
        android:textColor="#373737"
        android:textColorHint="#191919"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/country"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tvPrepaid"
        app:layout_constraintTop_toBottomOf="@+id/tvPrepaid" />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="97dp"
        android:layout_height="16dp"
        android:layout_marginTop="4dp"
        android:hint="\?"
        android:textColor="#000000"
        android:textColorHint="#5A5A5A"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="LUHN"
        android:textColor="#373737"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/tvLatilude_Longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="(latitude: ?, longitude: ?)"
        android:textColorHint="#5A5A5A"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/tvCountry"
        app:layout_constraintTop_toBottomOf="@+id/tvCountry" />

    <TextView
        android:id="@+id/tvLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="\?"
        android:textColorHint="#5A5A5A"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/tvluhn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="right"
        android:hint="Yes / No"
        android:textColorHint="#5A5A5A"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <Button
        android:id="@+id/bGetInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="50dp"
        android:onClick="onClickResult"
        android:text="@string/get_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bGetInfo"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>